--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,15 +2,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
-    <script src="{% static 'scripts/app.js' %}"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+        <script src="{% static 'scripts/app.js' %}"></script>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            {% block title %}
+            {% endblock %}
+        </title>
+    </head>
+    <body>
+        {% block body %}
+        {% endblock %}
+    </body>
 </html>
