--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -12,11 +12,12 @@
         </div>
         <a href="{% url 'index' %}">Clear Search</a>
     </form>
+    <a href="{% url 'movie_create' %}">Add Movie</a>
 
-    <h1>Movies</h1>
+    <h1>{{header}}</h1>
     {% for movie in movies %}
         <img src="{{movie.img}}">
-        <h3>Title: {{movie.title}}</h3>
+        <h3>Title:</h3><span><a href="{% url 'movie_detail' movie.pk %}">{{movie.title}}</a></span>
         <h3>Genre: {{movie.genre}}</h3>
         <h3>Year: {{movie.year}}</h3>
     {% endfor %}
