--- a/main_app/templates/movie_detail.html
+++ b/main_app/templates/movie_detail.html
@@ -20,6 +20,6 @@
     </div>
     <div>
         <a href="{% url 'movie_update' movie.pk %}">Update</a>
-        <a href=""></a>
+        <a href="{% url 'movie_delete' movie.pk %}">Delete</a>
     </div>
 {% endblock %}
